stylesheet.css
/*GENERAL*/
/*THIS CSS RESET WAS NOT CREATED BY ME*/
/**
 * Eric Meyer's Reset CSS v2.0 (http://meyerweb.com/eric/tools/css/reset/)
 * http://cssreset.com
 */

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}

/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}

body {
	line-height: 1;
}

ol, ul {
	list-style: none;
}

blockquote, q {
	quotes: none;
}

blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}

table {
	border-collapse: collapse;
	border-spacing: 0;
}

/*Note:this is the end of the CSS reset, additional general styles included below*/

body {
	/*background: url('http://onedesigncompany.com/images/bg-blk.jpg');*/
	background:url('site-background.jpg');
}

section {
	width: 1024px !important;
	margin: 0 auto;
	padding-top: 60px;
}

.lessonparameter {
	width: 1024px !important;
	margin: 0 auto;
}

/*HEADER*/

.header {
	border-bottom: 1px solid black;
	background:url('binding_dark.png');
	z-index: 999;
}

header {
	font-family: 'Denk One', sans-serif;
	color:white;
	padding-left: 10px;
	padding-top: 10px;
	font-size: 26px;
	/*background: url('binding_dark.png');*/
	z-index: 1000;
}

.header h3 {
	color:white;
	display: inline-block;
	margin-left: 30px;
	font-family: 'Source Sans Pro', sans-serif;
	z-index: 1000;
}

.header ul li:nth-child(5) {
	margin-right:120px;
}

/*NAVBAR*/

nav {
	text-align: right;
	margin-top: -10px;
	z-index: 1000;
}

nav ul {
	/*display: inline;*/
}

nav ul a {
	color:#9e9e9e;
	text-decoration: none;
	font-family: 'Source Sans Pro', sans-serif;
}

nav ul a:hover {
	color:#dddddd;
	-webkit-transition: all 0.5s ease-in;
	-moz-transition: all 0.5s ease-in;
	-o-transition: all 0.5s ease-in;
	transition: all 0.5s ease-in;
}

nav ul li {
	list-style-type: none;
	display: inline-block;
	width:120px;
}

.fixednav {
	position: fixed;
	width: 100%;
}

/*LESSON EXPLANATIONS*/

.lessonexplain {
	height:180px;
	width:15%;
	/*border:1px solid red;*/
	display: inline-block;
	background-color: rgba(0,0,0,0.3);
	margin: 0 auto;
	/*position: relative;*/
	border-radius: 5px;
}

.lessonexplain:hover {
	background-color:rgba(0,0,0,0.5);
	-webkit-transition: all 0.5s ease-in;
	-moz-transition: all 0.5s ease-in;
	-o-transition: all 0.5s ease-in;
	transition: all 0.5s ease-in;
}

.lessonexplain h3 {
	text-align: center;
	margin-top:20px;
	font-family: 'Source Sans Pro', sans-serif;
	font-weight: bold;
}

.lessonsummary .lessonexplain p {
	font-size: 16px;
	font-weight: normal;
	margin-top: 20px;
	width:85%;
	margin-left: 10px;
}

.lessonsummary {
	padding-bottom: 60px;
	text-align: center;
	border-bottom: 2px solid black;
	margin-top: 30px;
}

.lessonsummary p {
	font-family: 'Source Sans Pro', sans-serif;
	font-size: 22px;
	font-weight: bold;
}

.question {
	padding-top: 30px;
}

.l3 a {
	text-decoration: none;
	color:black;
}

.l3 a:hover {
	color:#dddddd;
}

/*FAQ*/

.faqdivs {
	display: inline-block;
	padding-top: 10px;
	margin-top: 20px;
	width: 33%;
	padding-bottom: 10px;
}

.faqdivs h2 {
	font-family: 'Source Sans Pro', sans-serif;
	text-align: center;
	font-weight: bold;
	padding-bottom: 10px;
}

.faqdivs ul {
	list-style-type: square;
}

.faqdivs p {
	font-family: 'Source Sans Pro', sans-serif;
	width:80%;
	margin-left:32px;
	text-align: justify;
}

.faqdivs ul li {
	font-family: 'Source Sans Pro', sans-serif;
}

.faqconstraint {
	width: 80%;
	margin-left: 20px;
}

.whycontinue {
	border-right: 1px solid black;
}

.howlong {
	border-right: 1px solid black;
}

.faq {
	border-bottom: 2px solid black;
	padding-bottom: 20px;
}

/*LESSON ONE*/

.lesson1 {
	height: 100%;
	width:100%;
	position: absolute;
	top:100%;
	left:0%;
	z-index: 1;
}

.lesson1 h2 {
	background-color: rgba(186,218,85,0.8);
	border-radius: 25px;
	display: inline-block;
	padding:7px;
	border:1px solid black;
	/*margin-top: 50px;*/
	font-weight:bold;
	font-size: 24px;
	font-family: 'Source Sans Pro', sans-serif;
	margin-top: 85px;
	/*margin:0 auto;*/
	/*margin-left: 10%;*/
	position: relative;
	z-index: 0;
}

.lesson1 h3 {
	display: inline-block;
	font-family: 'Source Sans Pro', sans-serif;
	font-size: 20px;
	padding-left: 7px;
}

.lesson1 p {
	display:inline-block;
	padding-left: 120px;
	font-family: 'Source Sans Pro', sans-serif;
}

.gitexplaindivs {
	width:28%;
	text-align: center;
	background-color: rgba(0,0,0,0.3);
	height:350px;
	display: inline-block;
	border-radius: 5px;
}

.gitexplaindivs h3 {
	margin-top: 20px;
	padding-bottom: 15px;
}

.gitexplaindivs:hover {
	background-color: rgba(0,0,0,0.5);
	-webkit-transition: all 0.5s ease-in;
	-moz-transition: all 0.5s ease-in;
	-o-transition: all 0.5s ease-in;
	transition: all 0.5s ease-in;
}

.gitexplaindivs p {
	text-align: center;
	margin: 0 auto;
	padding: 0;
	width: 80%;
	padding-bottom: 20px;
}

.gitexplaincontain {
	margin-top: 30px;
	text-align: center;
	margin-bottom: 30px;
}

/*RESPONSIVE DESIGN*/

@media screen and (max-width:1060px) {
	header {
		text-align: center;
		padding-top: 15px;
	}

	.header h3 {
		display:none;
	}

	nav ul {
		text-align: center;
		margin-top: 30px !important;
		margin: 0 auto;
	}

	nav ul li {
		margin-right: 0 !important;
		text-align: center;
	}

	.lessonsummary {
		padding-top: 40px;
	}
}

